# Open-Search

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
assets/: terminalScript.txt
enums/: ItemOrigin.cpp
models/: ItemUtils.cpp  ItemUtils.h  ResultsModel.cpp  ResultsModel.h
static/: searchfilters.cpp  searchfilters.h  staticvariables.cpp  staticvariables.h
structs/: ResultItem.cpp  ResultItem.h  ShortResultItem.h
